tests/type-errors/const_assign.arl
archetype const_assign

entry exec() {
  const pkh : address = caller;
  pkh := source
}
